kubeconfig/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: worker.com
      http:
        paths:
          - path: /api/?(.*)/
            pathType: Prefix
            backend:
              service:
                name: stud-back-srv
                port:
                  number: 3001
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: stud-front-srv
                port:
                  number: 3000
